Empty textarea on load

--- a/ui.html
+++ b/ui.html
@@ -111,12 +111,7 @@
   <label
     >Add new-line separated component or style name:
     <br />
-    <textarea id="components-or-styles" rows="5" required>
-Elements-Header
-utilities/opacity/lightest
-utilities/primary/400
-utilities/primary/500</textarea
-    >
+    <textarea id="components-or-styles" rows="5" required> </textarea>
   </label>
 </form>
 <div class="button-holder">
