ui: change monospace to sans-serif

--- a/ui.html
+++ b/ui.html
@@ -50,6 +50,7 @@
   }
 
   textarea {
+    font-family: sans-serif;
     width: 100%;
     padding: 0.5em;
     margin: 0 0 0.5em;
@@ -182,9 +183,10 @@
               }>
               <span>${
                 i.styleName
-                  ? `<code>${i.styleName}</code> - ${
-                      i.name
-                    } (${i.styleProp.replace("StyleId", "")})`
+                  ? `<i>${i.styleName}</i> - ${i.name} (${i.styleProp.replace(
+                      "StyleId",
+                      ""
+                    )})`
                   : i.name
               }</span>
               <span class="actions">
